Updated examples with NS and EW

--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -15,15 +15,7 @@
    "execution_count": 1,
    "id": "59a5664c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded lib <CDLL './ddsolver/libdds.so', handle 55c95737d3c0 at 0x7f0d7f834990>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
@@ -32,12 +24,14 @@
     "from bots import BotBid\n",
     "from bidding import bidding\n",
     "from util import hand_to_str\n",
-    "from deck52 import random_deal"
+    "from deck52 import random_deal\n",
+    "from sample import Sample\n",
+    "import conf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "44786d5d",
    "metadata": {},
    "outputs": [
@@ -45,19 +39,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ../models/gib21_model/gib21-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/gib21_info_model/gib21_info-500000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lead_model_b/lead-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lr3_model/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lefty_model_tiny/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/dummy_model_tiny/dummy-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/righty_model_tiny/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/decl_model_tiny/decl-1000000\n"
+      "Reading configuration from ../src/config/default.conf\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_model/gib21-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_info_model/gib21_info-500000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lead_model_b/lead-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lefty_model/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/dummy_model/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/righty_model/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/decl_model/decl-1000000\n",
+      "Reading configuration from ../src/config/default.conf\n"
      ]
     }
    ],
    "source": [
-    "models = Models.load('../models')   # loading neural networks"
+    "models = Models.from_conf(conf.load('../src/config/default.conf'))   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('../src/config/default.conf'))  # Load sampling strategies"
    ]
   },
   {
@@ -70,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "19dbfeb7",
    "metadata": {},
    "outputs": [],
@@ -95,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bfe98f56",
    "metadata": {},
    "outputs": [
@@ -105,30 +102,38 @@
        "'X'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, -1, -1, 0.1, sampler)\n",
     "\n",
     "bot_bid.bid(['PAD_START', '1D', '1S']).bid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "602468ef",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: 4H   0.6589 Expected Score: 101  \n",
+      "2: PASS 0.3114 Expected Score: 44   \n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'4H'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7227ea6b",
    "metadata": {},
    "outputs": [
@@ -150,14 +155,14 @@
      "data": {
       "text/plain": [
        "[{'call': '4H',\n",
-       "  'insta_score': 0.6589298248291016,\n",
-       "  'expected_score': 38.16571872706945},\n",
+       "  'insta_score': 0.6589298844337463,\n",
+       "  'expected_score': 101.5339689096782},\n",
        " {'call': 'PASS',\n",
-       "  'insta_score': 0.3114378750324249,\n",
-       "  'expected_score': 15.413541678671342}]"
+       "  'insta_score': 0.3114379048347473,\n",
+       "  'expected_score': 44.314525486562495}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,26 +199,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "55b647a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['xxxx.Qxx.Q8xx.KQ Q8.A9xx.KJxx.Axx AKJT9.Tx.9x.J8xx xx.KJ8x.ATx.T9xx',\n",
-       " 'KJ9x.Txx.8xx.Qxx 8x.AQx.KJxxx.KJx AQTxx.9xx.Q9.A8x xx.KJ8x.ATx.T9xx',\n",
-       " 'T8x.QT.KJ9x.QJ8x Qxx.A9xx.Q8xx.Ax AKJ9x.xxx.xx.Kxx xx.KJ8x.ATx.T9xx',\n",
-       " '8xx.9x.K8xx.KQ8x AT9.Axxx.Q9xx.Ax KQJxx.QTx.Jx.Jxx xx.KJ8x.ATx.T9xx',\n",
-       " '8xx.A9xx.QJxx.xx ATx.QTxx.K9xx.AJ KQJ9x.x.8x.KQ8xx xx.KJ8x.ATx.T9xx',\n",
-       " 'KTxx.Q9x.xxx.Qxx Ax.ATxx.KQJ9x.8x QJ98x.xx.8x.AKJx xx.KJ8x.ATx.T9xx',\n",
-       " 'QJx.9xxx.xxx.K8x AT.ATxx.QJ8x.QJx K98xxx.Q.K9x.Axx xx.KJ8x.ATx.T9xx',\n",
-       " 'JTx.x.K98x.K8xxx K98.AQ9x.QJxxx.Q AQxxx.Txxx.x.AJx xx.KJ8x.ATx.T9xx',\n",
-       " 'Txx.9xx.QJx.Axxx KQ9.AQTx.8xxxx.Q AJ8xx.xx.K9.KJ8x xx.KJ8x.ATx.T9xx',\n",
-       " 'QT9.Qxx.98xx.AJx KJ8.AT9x.KJxxx.8 Axxxx.xx.Q.KQxxx xx.KJ8x.ATx.T9xx']"
+       "['KQTx.9xx.8xxx.8x 9x.ATxx.KQ9x.AJx AJ8xx.Qx.Jx.KQxx xx.KJ8x.ATx.T9xx',\n",
+       " 'Jxx.Qx.Jxxx.AJxx Q8x.AT9x.K9xx.Kx AKT9x.xxx.Q8.Q8x xx.KJ8x.ATx.T9xx',\n",
+       " 'J8xx.Txxx.xx.KQx Qx.AQ9x.KQJ8xx.8 AKT9x.x.9x.AJxxx xx.KJ8x.ATx.T9xx',\n",
+       " 'KJx.9xxx.Kxx.Qxx Axx.AQTx.J9xx.Jx QT98x.x.Q8x.AK8x xx.KJ8x.ATx.T9xx',\n",
+       " 'K8xx.xx.J9xx.Q8x J9.AQTx.KQ8x.Jxx AQTxx.9xx.xx.AKx xx.KJ8x.ATx.T9xx',\n",
+       " 'QJ8.Qxx.Jxxx.8xx AK.A9xx.KQ98x.Jx T9xxxx.Tx.x.AKQx xx.KJ8x.ATx.T9xx',\n",
+       " 'A9x.Qxx.QJ9x.8xx KTx.A9xx.K8xx.KJ QJ8xx.Tx.xx.AQxx xx.KJ8x.ATx.T9xx',\n",
+       " 'ATx.Txxx.QJx.Qxx QJ.AQ9x.98xx.A8x K98xxx.x.Kxx.KJx xx.KJ8x.ATx.T9xx',\n",
+       " 'A98x.9xx.J9x.Jxx KJ.AQxx.KQxxxx.8 QTxxx.Tx.8.AKQxx xx.KJ8x.ATx.T9xx',\n",
+       " 'KJx.Qx.K8xx.xxxx Axx.Axxx.QJ9x.Q8 QT98x.T9x.xx.AKJ xx.KJ8x.ATx.T9xx']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7101e514",
    "metadata": {},
    "outputs": [
@@ -242,63 +247,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8xx.xx.xxx.AKJxx K9x.AQTx.KQJ98.8 AQJTx.9xx.xx.Qxx xx.KJ8x.ATx.T9xx\n",
-      "KJ8.xx.8xx.J8xxx Q9x.Axxx.KQJ9x.K ATxxx.QT9.xx.AQx xx.KJ8x.ATx.T9xx\n",
-      "xxx.9xx.9x.AQJxx A98.Axxx.KJ8xx.x KQJTx.QT.Qxx.K8x xx.KJ8x.ATx.T9xx\n",
-      "KTxx.9xx.9x.Qxxx 8x.ATxx.KJ8x.AJ8 AQJ9x.Qx.Qxxx.Kx xx.KJ8x.ATx.T9xx\n",
-      "Q9x.Qxx.Q9x.Kxxx ATx.ATxx.Kxxx.Jx KJ8xx.9x.J8x.AQ8 xx.KJ8x.ATx.T9xx\n",
-      "Kxx.Txx.KJ98.Jxx AT.A9xx.Qxxx.A8x QJ98xx.Qx.xx.KQx xx.KJ8x.ATx.T9xx\n",
-      "JT8x.T9x.Qx.A8xx 9x.AQxx.KJ8xxx.Q AKQxx.xx.9x.KJxx xx.KJ8x.ATx.T9xx\n",
-      "Kxx.T9xx.QJxx.xx ATx.AQxx.98xx.K8 QJ98x.x.Kx.AQJxx xx.KJ8x.ATx.T9xx\n",
-      "Jxx.ATx.Jxxx.Jxx AK.Qxxx.K9xx.Qxx QT98xx.9x.Q8.AK8 xx.KJ8x.ATx.T9xx\n",
-      "AJ9.9xx.Q8x.Q8xx 8x.QTxx.K9xx.AKJ KQTxxx.Ax.Jxx.xx xx.KJ8x.ATx.T9xx\n",
-      "Qxx.QT.J8xx.Qxxx A98.A9xx.KQxx.Jx KJTxx.xxx.9x.AK8 xx.KJ8x.ATx.T9xx\n",
-      "K9x.Qx.J98x.K8xx xx.Axxx.Qxxx.AQx AQJT8x.T9x.Kx.Jx xx.KJ8x.ATx.T9xx\n",
-      "Jxx.Qxx.QJx.QJxx KTx.AT9x.K9xx.K8 AQ98x.xx.8xx.Axx xx.KJ8x.ATx.T9xx\n",
-      "KTx.9xx.Kxxx.QJx AJ8.AQxx.Q9xx.8x Q9xxx.Tx.J8.AKxx xx.KJ8x.ATx.T9xx\n",
-      "QT9.9xx.Qx.KJ8xx AKx.Qxxx.J98xx.Q J8xxx.AT.Kxx.Axx xx.KJ8x.ATx.T9xx\n",
-      "Jxx.Txx.Jxx.KQ8x K8xx.Q9xx.KQx.Ax AQT9.Ax.98xx.Jxx xx.KJ8x.ATx.T9xx\n",
-      "T9xx.Qx.Q9xx.QJx Jx.ATxx.K8xxx.Ax AKQ8x.9xx.J.K8xx xx.KJ8x.ATx.T9xx\n",
-      "QJxx.9xx.KJx.xxx T9x.ATxx.Qxxx.AQ AK8x.Qx.98x.KJ8x xx.KJ8x.ATx.T9xx\n",
-      "AJ8x.xx.xxxx.xxx KT.T9xx.KQJ98.KJ Q9xxx.AQx.x.AQ8x xx.KJ8x.ATx.T9xx\n",
-      "Jxxx.9xx.KJx.J8x K9x.AQTx.Qxxx.Qx AQT8.xx.98x.AKxx xx.KJ8x.ATx.T9xx\n",
-      "Kxx.Txx.8xx.QJ8x Qxx.Q9xx.Qxxx.AK AJT98.Ax.KJ9.xxx xx.KJ8x.ATx.T9xx\n",
-      "Q8xx.9xx.Kxxx.Q8 Ax.AQTx.Q98xx.xx KJT9x.xx.J.AKJxx xx.KJ8x.ATx.T9xx\n",
-      "JTx.xx.xxx.KJ8xx AQ.ATxx.KJ8xx.xx K98xxx.Q9x.Q9.AQ xx.KJ8x.ATx.T9xx\n",
-      "KJxxx.xxx.Qx.8xx 8.A9xx.KJ9xx.KQJ AQT9x.QT.8xx.Axx xx.KJ8x.ATx.T9xx\n",
-      "JT9.xx.J8xx.K8xx xxx.AQ9x.Kxxx.Ax AKQ8x.Txx.Q9.QJx xx.KJ8x.ATx.T9xx\n",
-      "J98xx.xx.J9x.KJ8 K.QT9x.KQxxx.AQx AQTxx.Axx.8x.xxx xx.KJ8x.ATx.T9xx\n",
-      "KJx.Qxxx.98.Q8xx Qx.AT9x.KQxx.Kxx AT98xx.x.Jxxx.AJ xx.KJ8x.ATx.T9xx\n",
-      "QJ9x.Txx.Q8x.J8x 8x.A9xx.Kxxxx.KQ AKTxx.Qx.J9.Axxx xx.KJ8x.ATx.T9xx\n",
-      "J8xx.9x.9xx.AJxx Qx.AQxx.KJxxx.Q8 AKT9x.Txx.Q8.Kxx xx.KJ8x.ATx.T9xx\n",
-      "A98x.QTx.Q8x.Jxx J.Axxx.K9xxx.KQx KQTxxx.9x.Jx.A8x xx.KJ8x.ATx.T9xx\n",
-      "T9xx.QT9.Jxx.KQx Qx.Axxx.Q98x.AJ8 AKJ8x.xx.Kxx.xxx xx.KJ8x.ATx.T9xx\n",
-      "ATx.Qxx.9xx.Jxxx Jxx.ATxx.KQxxx.Q KQ98x.9x.J8.AK8x xx.KJ8x.ATx.T9xx\n",
-      "Axxx.xxx.9xx.Q8x Kx.AQxx.KQ8xx.xx QJT98.T9.Jx.AKJx xx.KJ8x.ATx.T9xx\n",
-      "Txx.Axx.J98xx.Jx A8x.T9xx.KQxx.Kx KQJ9x.Qx.x.AQ8xx xx.KJ8x.ATx.T9xx\n",
-      "KT9x.T9x.98x.Kxx xx.AQxx.QJxx.A8x AQJ8x.xx.Kxx.QJx xx.KJ8x.ATx.T9xx\n",
-      "K9xx.Qx.8xx.Qxxx A8.9xxx.KQxx.KJ8 QJTxx.ATx.J9x.Ax xx.KJ8x.ATx.T9xx\n",
-      "Qxx.ATxx.98xx.Q8 JTx.Q9xx.KQJx.Ax AK98x.x.xx.KJxxx xx.KJ8x.ATx.T9xx\n",
-      "AT8.T9x.9xxx.Q8x 9xx.AQxx.KQ8x.Kx KQJxx.xx.Jx.AJxx xx.KJ8x.ATx.T9xx\n",
-      "JT8x.Q9x.K.8xxxx AQ.ATxx.J9xxxx.K K9xxx.xx.Q8x.AQJ xx.KJ8x.ATx.T9xx\n",
-      "Q9x.xx.Qxx.QJ8xx Axx.AQ9x.K98xx.x KJT8x.Txx.Jx.AKx xx.KJ8x.ATx.T9xx\n",
-      "Jxxx.Q9x.Jx.QJ8x Kx.ATxx.Q98x.Kxx AQT98.xx.Kxxx.Ax xx.KJ8x.ATx.T9xx\n",
-      "QT8x.Axx.8xxx.Jx K9.Qxxx.KQ9xx.Ax AJxxx.T9.J.KQ8xx xx.KJ8x.ATx.T9xx\n",
-      "T9x.9xx.Kxxx.KQx Axx.Qxxx.QJxx.Ax KQJ8x.AT.98.J8xx xx.KJ8x.ATx.T9xx\n",
-      "QTx.xx.Q8xx.KJ8x KJ.AT9x.KJxx.Qxx A98xxx.Qxx.9x.Ax xx.KJ8x.ATx.T9xx\n",
-      "Axxx.9xx.8xx.KQx KJ.Axxx.KJ9x.8xx QT98x.QT.Qxx.AJx xx.KJ8x.ATx.T9xx\n",
-      "KTx.xxx.Q8x.QJxx Qxx.AQ9x.KJxx.xx AJ98x.Tx.9xx.AK8 xx.KJ8x.ATx.T9xx\n",
-      "AT8x.Txx.8xx.Kxx 9x.A9xx.KQJx.A8x KQJxx.Qx.9xx.QJx xx.KJ8x.ATx.T9xx\n",
-      "KQx.T9x.J98x.Kxx J8x.AQxx.KQxxx.Q AT9xx.xx.x.AJ8xx xx.KJ8x.ATx.T9xx\n",
-      "Txx.QTxx.J9x.AJ8 KQx.A9xx.KQxx.xx AJ98x.x.8xx.KQxx xx.KJ8x.ATx.T9xx\n",
-      "8xx.xx.QJ9x.K8xx J9xx.AQ9x.K8x.Qx AKQT.Txx.xxx.AJx xx.KJ8x.ATx.T9xx\n",
-      "T8x.9x.QJxx.QJxx J9x.ATxx.K8xx.Ax AKQxx.Qxx.9x.K8x xx.KJ8x.ATx.T9xx\n",
-      "Txx.Axx.J9xx.Q8x KQx.Q9xx.KQ8x.xx AJ98x.Tx.xx.AKJx xx.KJ8x.ATx.T9xx\n",
-      "Txx.xxx.KQx.J8xx AK8.QT9x.J9xxx.K QJ9xx.Ax.8x.AQxx xx.KJ8x.ATx.T9xx\n",
-      "QTx.T.KJ9xx.Jxxx J8x.Axxx.Q8xx.AK AK9xx.Q9xx.x.Q8x xx.KJ8x.ATx.T9xx\n",
-      "JTx.A9.Qxxx.J8xx A9x.QTxx.K8xx.KQ KQ8xx.xxx.J9.Axx xx.KJ8x.ATx.T9xx\n",
-      "Kxx.QTx.8xxx.8xx AT8.9xxx.KJ9x.KJ QJ9xx.Ax.Qx.AQxx xx.KJ8x.ATx.T9xx\n",
-      "8xx.9xxx.xx.AQ8x KJ9x.AQTx.K8xx.x AQTx.x.QJ9x.KJxx xx.KJ8x.ATx.T9xx\n"
+      "98x.xx.8xx.AQ8xx QJx.AQxx.KQJ9x.x AKTxx.T9x.xx.KJx xx.KJ8x.ATx.T9xx\n",
+      "KTx.Txx.J8xx.AJx 98.AQxx.K9xx.Kxx AQJxxx.9x.Qx.Q8x xx.KJ8x.ATx.T9xx\n",
+      "QJT8x.9xx.Q8x.Jx A.AQxx.KJ9xx.K8x K9xxx.Tx.xx.AQxx xx.KJ8x.ATx.T9xx\n",
+      "8xxx.Txxx..KJxxx Tx.AQ9x.QJ98x.A8 AKQJ9.x.Kxxxx.Qx xx.KJ8x.ATx.T9xx\n",
+      "Qxxx.xxx.KJxx.xx KJ.QT9x.Q8xx.KJ8 AT98x.Ax.9x.AQxx xx.KJ8x.ATx.T9xx\n",
+      "Q8xx.9xx.Qxx.QJx T9x.AQxx.K9xx.A8 AKJx.Tx.J8x.Kxxx xx.KJ8x.ATx.T9xx\n",
+      "T98x.9xx.J9x.KQx Qx.ATxx.KQxxx.Jx AKJxx.Qx.8x.A8xx xx.KJ8x.ATx.T9xx\n",
+      "Q8x.QT9x.J9x.QJx AJx.Axx.KQ8xx.xx KT9xx.xx.xx.AK8x xx.KJ8x.ATx.T9xx\n",
+      "AT9.9xx.K9x.Qxxx K8x.ATx.QJxxx.Ax QJxxx.Qxx.8x.KJ8 xx.KJ8x.ATx.T9xx\n",
+      "Kxx.xxx.Qxxx.K8x 98.AQxx.KJ98x.Ax AQJTxx.T9.x.QJxx xx.KJ8x.ATx.T9xx\n",
+      "Jxx.x.KJ98.Qxxxx QT8x.Q9xx.Qxx.AK AK9x.ATxx.xxx.J8 xx.KJ8x.ATx.T9xx\n",
+      "A9x.9xx.Q98xx.Kx Qx.AQTx.Kxxx.Q8x KJT8xx.xx.J.AJxx xx.KJ8x.ATx.T9xx\n",
+      "98xx.Txxx.Kxx.QJ KT.AQ9x.Jxxx.K8x AQJxx.x.Q98.Axxx xx.KJ8x.ATx.T9xx\n",
+      "JTx.Qxx.Q9xx.Jxx A98.A9xx.KJ8xx.Q KQxxx.Tx.x.AK8xx xx.KJ8x.ATx.T9xx\n",
+      "JTx.xx.98.KQJ8xx Q9x.A9xx.KQxxx.A AK8xx.QTx.Jxx.xx xx.KJ8x.ATx.T9xx\n",
+      "A9xx.Q9x.8xxx.Kx x.ATxx.KJ9x.Axxx KQJT8x.xx.Qx.QJ8 xx.KJ8x.ATx.T9xx\n",
+      "KTx.T9xx.Qx.QJ8x Jx.AQxx.Kxxx.Axx AQ98xx.x.J98x.Kx xx.KJ8x.ATx.T9xx\n",
+      "T8x.Qxx.Kxx.Qxxx AKx.ATxx.QJ9xx.x QJ9xx.9x.8x.AKJ8 xx.KJ8x.ATx.T9xx\n",
+      "9xx.Q9x.xxx.Axxx ATx.Axxx.QJ9xx.K KQJ8x.Tx.K8.QJ8x xx.KJ8x.ATx.T9xx\n",
+      "ATxx.Q9x.8xx.Jxx KJ.Axxx.J9xx.K8x Q98xx.Tx.KQx.AQx xx.KJ8x.ATx.T9xx\n",
+      "T9xx.A.J8xxx.Jxx Qx.Qxxx.KQ9x.KQx AKJ8x.T9xx.x.A8x xx.KJ8x.ATx.T9xx\n",
+      "T98.ATx.8x.Jxxxx Axx.9xxx.KQxx.K8 KQJxx.Qx.J9xx.AQ xx.KJ8x.ATx.T9xx\n",
+      "xxx.Axx.xxx.Q8xx AJT.Qxxx.KJ8x.Kx KQ98x.T9.Q9x.AJx xx.KJ8x.ATx.T9xx\n",
+      "Qxx.9xx.K8x.Kxxx K9x.AQxx.QJ9x.J8 AJT8x.Tx.xxx.AQx xx.KJ8x.ATx.T9xx\n",
+      "QT8.9xx.Q8x.QJ8x A9x.QTxx.Kxxx.Ax KJxxx.Ax.J9x.Kxx xx.KJ8x.ATx.T9xx\n",
+      "J9x.Qxx.Qxxx.K8x 8xxx.Axxx.KJ9.Ax AKQT.T9.8xx.QJxx xx.KJ8x.ATx.T9xx\n",
+      "T8x.Qxx.J9x.AJxx KJx.Axxx.KQxxx.x AQ9xx.T9.8x.KQ8x xx.KJ8x.ATx.T9xx\n",
+      "J8x.Qxx.KJxx.J8x Q9.Axxx.8xxx.AKx AKTxxx.T9.Q9.Qxx xx.KJ8x.ATx.T9xx\n"
      ]
     }
    ],
@@ -331,20 +307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "fc27ca79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['A8.Q752.T54.JT63',\n",
-       " 'K54.T643.A92.A72',\n",
-       " 'JT932.K9.Q86.854',\n",
-       " 'Q76.AJ8.KJ73.KQ9']"
+       "['KJT4.Q3.A2.K9754',\n",
+       " '852.K95.QT986.Q6',\n",
+       " 'A976.J742.54.AT3',\n",
+       " 'Q3.AT86.KJ73.J82']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,39 +332,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d480cbba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bidder_bots = [BotBid([False, False], hand, models) for hand in hands]"
+    "bidder_bots = [BotBid([False, False], hand, models, -1, -1, 0.1, sampler) for hand in hands]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7d77351a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: 4S   0.3891 Expected Score: 161  \n",
+      "2: PASS 0.5305 Expected Score: 106  \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['PASS',\n",
+       "['1C',\n",
        " 'PASS',\n",
+       " '1H',\n",
        " 'PASS',\n",
-       " '1N',\n",
+       " '1S',\n",
        " 'PASS',\n",
-       " '2C',\n",
+       " '3S',\n",
        " 'PASS',\n",
-       " '2D',\n",
-       " 'PASS',\n",
-       " '3N',\n",
+       " '4S',\n",
        " 'PASS',\n",
        " 'PASS',\n",
        " 'PASS']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
