--- a/src/examples/CardByCardAnalysis.ipynb
+++ b/src/examples/CardByCardAnalysis.ipynb
@@ -19,27 +19,21 @@
    "execution_count": 1,
    "id": "16f73f71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded lib <CDLL './ddsolver/libdds.so', handle 55b49670bb60 at 0x7f6b47a49990>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
     "\n",
     "from nn.models import Models\n",
     "from analysis import CardByCard\n",
-    "from util import parse_lin, display_lin"
+    "from util import parse_lin, display_lin\n",
+    "from sample import Sample\n",
+    "import conf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ca7fa897",
    "metadata": {},
    "outputs": [
@@ -47,24 +41,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ../models/gib21_model/gib21-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/gib21_info_model/gib21_info-500000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lead_model_b/lead-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lr3_model/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lefty_model_tiny/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/dummy_model_tiny/dummy-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/righty_model_tiny/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/decl_model_tiny/decl-1000000\n"
+      "Reading configuration from ../src/config/default.conf\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_model/gib21-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_info_model/gib21_info-500000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lead_model_b/lead-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lefty_model/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/dummy_model/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/righty_model/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/decl_model/decl-1000000\n",
+      "Reading configuration from ../src/config/default.conf\n"
      ]
     }
    ],
    "source": [
-    "models = Models.load('../models')   # loading neural networks"
+    "models = Models.from_conf(conf.load('../src/config/default.conf'))   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('../src/config/default.conf'))  # Load sampling strategies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2940c18a",
    "metadata": {},
    "outputs": [],
@@ -95,12 +92,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "card_by_card = CardByCard(dealer, vuln, hands, auction, play, models)"
+    "card_by_card = CardByCard(dealer, vuln, hands, auction, play, models, sampler)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7ab0cce5",
    "metadata": {},
    "outputs": [
@@ -180,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "73be8e31",
    "metadata": {},
    "outputs": [
@@ -224,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "573b5939",
    "metadata": {},
    "outputs": [
@@ -363,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7dcf0964",
    "metadata": {},
    "outputs": [
@@ -477,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cdd0edee",
    "metadata": {},
    "outputs": [],
@@ -489,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "86ccd5f5",
    "metadata": {},
    "outputs": [
@@ -513,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8fa74a29",
    "metadata": {},
    "outputs": [],
@@ -523,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "fb875929",
    "metadata": {},
    "outputs": [],
@@ -533,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "49c15172",
    "metadata": {},
    "outputs": [
@@ -618,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d79d9389",
    "metadata": {},
    "outputs": [
@@ -711,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "00c728a0",
    "metadata": {},
    "outputs": [
@@ -859,7 +856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
