--- a/src/examples/OpeningLead.ipynb
+++ b/src/examples/OpeningLead.ipynb
@@ -15,26 +15,20 @@
    "execution_count": 1,
    "id": "26570686",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded lib <CDLL './ddsolver/libdds.so', handle 55de62a4db30 at 0x7f6ae9d2e7d0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
     "\n",
     "from nn.models import Models\n",
-    "from bots import BotLead"
+    "from bots import BotLead\n",
+    "from sample import Sample\n",
+    "import conf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fe373c76",
    "metadata": {},
    "outputs": [
@@ -42,24 +36,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ../models/gib21_model/gib21-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/gib21_info_model/gib21_info-500000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lead_model_b/lead-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lr3_model/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/lefty_model_tiny/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/dummy_model_tiny/dummy-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/righty_model_tiny/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ../models/decl_model_tiny/decl-1000000\n"
+      "Reading configuration from ../src/config/default.conf\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_model/gib21-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/gib21_info_model/gib21_info-500000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lead_model_b/lead-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/lefty_model/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/dummy_model/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/righty_model/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/decl_model/decl-1000000\n",
+      "Reading configuration from ../src/config/default.conf\n"
      ]
     }
    ],
    "source": [
-    "models = Models.load('../models')"
+    "models = Models.from_conf(conf.load('../src/config/default.conf'))   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('../src/config/default.conf'))  # Load sampling strategies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c3397678",
    "metadata": {},
    "outputs": [
@@ -67,8 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of accepted samples: 212\n",
-      "[0.47322094 0.36946824 0.11546324]\n"
+      "accepted_samples for outcome: 190\n",
+      "Accepted samples for lead: 190\n"
      ]
     }
    ],
@@ -81,13 +78,13 @@
     "\n",
     "# what to lead?\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models)\n",
+    "lead_bot = BotLead([True, True], hand, models, -1, -1, sampler)\n",
     "lead = lead_bot.lead(auction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a2b5fe25",
    "metadata": {},
    "outputs": [
@@ -118,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "956ef356",
    "metadata": {},
    "outputs": [
@@ -163,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7cb2bf98",
    "metadata": {},
    "outputs": [
@@ -309,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
