Update of table manager when tested with Blue Chip Table Monitor + added better logging

--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -108,7 +108,7 @@
     }
    ],
    "source": [
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, -1, -1, 0.1, sampler)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, -1, -1, 0.1, sampler, False)\n",
     "\n",
     "bot_bid.bid(['PAD_START', '1D', '1S']).bid"
    ]
@@ -337,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bidder_bots = [BotBid([False, False], hand, models, -1, -1, 0.1, sampler) for hand in hands]"
+    "bidder_bots = [BotBid([False, False], hand, models, -1, -1, 0.1, sampler, False) for hand in hands]"
    ]
   },
   {
