--- a/src/examples/SingleDummyEstimates.ipynb
+++ b/src/examples/SingleDummyEstimates.ipynb
@@ -264,7 +264,7 @@
    "source": [
     "# we'll use a bidder bot to draw samples which are consistent with the auction\n",
     "# and give it North's cards (as North will be on lead against 3N)\n",
-    "bid_bot = BotBid([False, False], 'A8.Q752.T54.JT63', models, -1, -1, 0.1, sampler)\n",
+    "bid_bot = BotBid([False, False], 'A8.Q752.T54.JT63', models, -1, -1, 0.1, sampler, False)\n",
     "\n",
     "# let's assume the following auction has occurred\n",
     "auction = [\n",
