--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -53,8 +53,8 @@
     }
    ],
    "source": [
-    "models = Models.from_conf(conf.load('../src/config/default.conf'))   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('../src/config/default.conf'))  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('./config/default.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/default.conf'))  # Load sampling strategies"
    ]
   },
   {
